FIxed issue of white space at top of page by adding some styling to the * element

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
 * {
    scroll-behavior: smooth;
    font-family: "Roboto", "sans-serif";
-}
-
-body{
-    margin: 0px;
+   margin: 0 auto;
+   padding: 0;
+   outline: 0;
 }
 
 #header {
